<resources>
    <string name="app_name">Kawanua App</string>
    <string name="regis">Sign Up</string>
    <string name="atau">Or</string>
    <string name="empty_image_warning">Image can\'t be empty</string>
    <string name="silahkan_isi_form_terlebih__dahulu">Please fill the form</string>
    <string name="masukan_email">Enter Your Email</string>
    <string name="masukan_username">Enter Your Username</string>
    <string name="konfirmasi_password">Password Confirmation</string>
    <string name="masukan_password">Enter Your Password</string>
    <string name="daftar">SIGN UP</string>
    <string name="daftar_dengan_google">SIGN UP WITH GOOGLE</string>
    <string name="sudah_punya_akun_masuk">ALREADY HAVE AN ACCOUNT? LOG IN</string>
    <string name="kawanua">KAWANUA</string>
    <string name="gallery">Gallery</string>
    <string name="scan_screen">Scan Screen</string>
    <string name="kamera">Camera</string>
    <string name="unggah">Upload</string>
    <string name="beranda">Home</string>
    <string name="profil">Profile</string>
    <string name="pindai">Scan</string>
    <string name="kontak">Contact</string>
    <string name="title_activity_bottom_navigation">bottom_navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mode_gelap">Dark Mode</string>
    <string name="keluar">Logout</string>
    <string name="bahasa">Languange</string>
    <string name="scan">Scan</string>
    <string name="berita">News</string>
    <string name="banner">Banner</string>
    <string name="ikuti">FOLLOW US</string>
    <string name="tombol_bahasa">Button Language</string>
    <string name="masuktitle">Welcome back! Fill in to Log In!</string>
    <string name="masukgoogle">LOGIN WITH GOOGLE</string>
    <string name="masuk">LOGIN</string>
    <string name="ig">Instagram</string>
    <string name="linkedin">LinkedIn</string>
    <string name="lupa">Forgot Password?</string>
    <string name="noakun">Don\'t have an account yet?</string>
    <string name="hasil">Scan Result</string>
    <string name="ksdae">KSDAE</string>
    <string name="kebun">Nearest conservation place</string>
    <string name="title_activity_list_berita">ListBeritaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="lihat_semua">SEE ALL</string>

    <string name="title_activity_main">MainActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="belum_punya_akun_daftar">N0 ACCOUNT YET? SIGN UP</string>
    <string name="kelas">Class</string>
    <string name="family">Family</string>
    <string name="habitat">Habitat</string>
    <string name="kingdom">Kingdom</string>
    <string name="nama">Name</string>
    <string name="phylum">Phylum</string>
    <string name="endangered_level">Endangered Level</string>
    <string name="description">Description</string>
    <string name="order">Order</string>

    <string-array name="data_nama">
        <item>Balai Besar KSDA Sumatera Utara</item>
        <item>Balai Besar KSDA Riau</item>
        <item>Balai Besar KSDA Jawa Barat</item>
        <item>Balai Besar KSDA Jawa Timur</item>
        <item>Balai Besar KSDA NTT</item>
        <item>Balai Besar KSDA Sulawesi Selatan</item>
        <item>Balai Besar KSDA Papua</item>
        <item>Balai Besar KSDA Papua Barat</item>
        <item>Balai Besar TN Gunung Leuser</item>
        <item>Balai Besar TN Kerinci Seblat</item>
        <item>Balai Besar TN Bukit Barisan Selatan</item>
        <item>Balai Besar TN Gunung Gede Pangrango</item>
        <item>Balai Besar TN Bromo Tengger Semeru</item>
        <item>Balai Besar TN Betung Kerihun</item>
        <item>Balai Besar TN Lore Lindu</item>
    </string-array>

    <string-array name="data_alamat">
        <item>Jl. S.M. Raja No. 14 Km. 5,5 Marindal, Medan</item>
        <item>Jl. H.R. Soebrantas Km.8,5 Po.Box.1048 Tampan - Pekanbaru</item>
        <item>Jl. Gede Bage Selatan No.117 Cisaranten Kidul, Rancasari Bandung Tlp/Fax. (022) 7567715</item>
        <item>Jl. Bandara Juanda Surabaya - 61253 Tlp. (031) 8667239 Fax. (031) 8671985</item>
        <item>Jl. SK. Lerik, Kelapa Lima, Kota Kupang, NTT</item>
        <item>Jl. Perintis Kemerdekaan Km.13,7 Makassar - 90242 Tlp. (0411) 590371 Fax. (0411) 590370</item>
        <item>Jl. Raya Abepura - Kotaraja, Papua Tlp. (0967) 5815596 Fax. (0967) 585529</item>
        <item>Jl. Klamono km.16 Kota Sorong Papua Barat</item>
        <item>Jl. Selamat No. 137 Kel. Siti Rejo III Medan Amplas, Medan 20219 Tlp.(061) 7872919 Fax.(061) 7864510</item>
        <item>Jl. Basuki Rachmat No.11 PO.Box.40 Sungai Penuh, Jambi - 37101 Tlp.(0748) 22240 Fax.(0748) 22300, 22250</item>
        <item>Jl. Ir. H. Juanda No.19, Kota Batu, Kota Agung, Kabupaten Tanggamus</item>
        <item>Jl. Raya Cibodas, Cipanas Po.Box.3 Cipanas, Cianjur - 43253 Tlp/Fax.(0263) 512776, 519415</item>
        <item>Jl. Raden Intan No.6, Polowijen, Kec. Blimbing, Kota Malang, Jawa Timur 65125</item>
        <item>Jl. Banin No.6, Kedamin Hilir, Putussibau Sel., Kabupaten Kapuas Hulu</item>
        <item>Jl. Pro. Moh. Yamin No.53, Tatura Utara, Palu Sel., Kota Palu, Sulawesi Tengah</item>
    </string-array>

    <string-array name="data_nomor">
        <item>085376699066</item>
        <item>081374742981</item>
        <item>081228673757</item>
        <item>082232115200</item>
        <item>081138104999</item>
        <item>08114600883</item>
        <item>082398029978</item>
        <item>081148500040</item>
        <item>081260608886</item>
        <item>082287971791</item>
        <item>085266009917</item>
        <item>087780937837</item>
        <item>085259934112</item>
        <item>082158794140</item>
        <item>08114555989</item>
    </string-array>
    <string name="maps" translatable="false">AIzaSyD5yQYmPklVPuH5hwx20SeCl4zUPVG8VmI</string>

</resources>