<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_1"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:visible="true"
        android:title="@string/beranda" />
    <item
        android:id="@+id/item_2"
        android:enabled="true"
        android:icon="@drawable/scanner"
        android:title="@string/pindai"/>
    <item
        android:id="@+id/item_3"
        android:enabled="true"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/profil" />

    <item
        android:id="@+id/item_4"
        android:enabled="true"
        android:icon="@drawable/contact"
        android:title="@string/kontak"/>

</menu>