<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jonathan.kawanuaapp.ui.home.HomeFragment"
        android:label="@string/beranda"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_contact"
            app:destination="@id/navigation_list" />
        <action
            android:id="@+id/action_home_to_detail"
            app:destination="@id/navigation_detail" />

    </fragment>

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.jonathan.kawanuaapp.ui.scan.ScanFragment"
        android:label="@string/pindai"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.jonathan.kawanuaapp.ui.profile.ProfileFragment"
        android:label="@string/profil"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.jonathan.kawanuaapp.ui.contact.ContactFragment"
        android:label="@string/kontak"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.jonathan.kawanuaapp.ui.listnews.ListBeritaFragment"
        android:label="@string/berita"
        tools:layout="@layout/fragment_list_berita" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.jonathan.kawanuaapp.ui.detailnews.DetailNewsFragment"
        android:label="@string/berita"
        tools:layout="@layout/fragment_detail_news" />

</navigation>