<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/logoKawanua"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/kawanua"
        android:src="@drawable/kawanua_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_silahkan_isi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/silahkan_isi_form_terlebih__dahulu"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoKawanua" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:hint="@string/masukan_username"
        app:layout_constraintEnd_toEndOf="@+id/tv_silahkan_isi"
        app:layout_constraintStart_toStartOf="@+id/tv_silahkan_isi"
        app:layout_constraintTop_toBottomOf="@id/tv_silahkan_isi"
        app:startIconDrawable="@drawable/baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nama_pengguna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:hint="@string/masukan_email"
        app:layout_constraintEnd_toEndOf="@+id/textFieldUsername"
        app:layout_constraintStart_toStartOf="@+id/textFieldUsername"
        app:layout_constraintTop_toBottomOf="@id/textFieldUsername"
        app:startIconDrawable="@drawable/baseline_email_24">

        <com.jonathan.kawanuaapp.ui.custom.EmailEditText
            android:id="@+id/email_pengguna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/textFieldEmail"
        app:layout_constraintStart_toStartOf="@+id/textFieldEmail"
        app:layout_constraintTop_toBottomOf="@id/textFieldEmail">

        <com.jonathan.kawanuaapp.ui.custom.PasswordEditText
            android:id="@+id/password_pengguna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/masukan_password"
            android:inputType="textPassword"
            android:paddingStart="8dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldKonfirmasiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:hint="@string/konfirmasi_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/textFieldPassword"
        app:layout_constraintStart_toStartOf="@+id/textFieldPassword"
        app:layout_constraintTop_toBottomOf="@id/textFieldPassword">

        <com.jonathan.kawanuaapp.ui.custom.PasswordEditText
            android:id="@+id/konfirmasi_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textPassword"
            android:paddingStart="8dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/daftar"
        app:layout_constraintBottom_toTopOf="@+id/tv_sudah_punya_akun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldKonfirmasiPassword"
        app:layout_goneMarginTop="16dp" />

    <TextView
        android:id="@+id/tv_sudah_punya_akun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/sudah_punya_akun_masuk"
        android:textAlignment="center"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_daftar"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
