<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_banner"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.search.SearchBar
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Masukan kata kunci"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_banner" />

        <com.google.android.material.search.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="Masukan kata kunci"
            app:layout_anchor="@id/searchBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_berita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/poppins_extra_bold"
            android:text="@string/berita"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/searchBar"
            app:layout_constraintTop_toBottomOf="@+id/searchBar" />

        <TextView
            android:id="@+id/tv_lihatSemua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:text="@string/lihat_semua"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="@+id/searchBar"
            app:layout_constraintTop_toBottomOf="@+id/searchBar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/tv_lihatSemua"
            app:layout_constraintStart_toStartOf="@+id/tv_berita"
            app:layout_constraintTop_toBottomOf="@+id/tv_berita"
            tools:listitem="@layout/item_row_main" />

        <TextView
            android:id="@+id/kebun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/poppins_extra_bold"
            android:text="@string/kebun"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/recyclerView"
            app:layout_constraintStart_toStartOf="@+id/recyclerView"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <com.google.android.gms.maps.MapView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/kebun"
            app:layout_constraintStart_toStartOf="@+id/kebun"
            app:layout_constraintTop_toBottomOf="@+id/kebun" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>